# commitoria

./: Cargo.toml  README.md  TODO.md  flake.nix
core/: Cargo.toml
core/fixtures/: github.html  gitlab.json
core/fixtures/gitlab-calendar/: calendar.js
core/src/: lib.rs
fixtures/gitlab-calendar/: calendar.html  calendar.js
lib/: Cargo.toml
lib/fixtures/: gitea.html
lib/src/: lib.rs  source.rs
lib/src/provider/: git.rs  gitea.rs  github.rs  gitlab.rs  mod.rs
lib/src/svg/: contribution_colour.rs  contribution_level.rs  mod.rs  rgba.rs  svg_renderer.rs
lib/src/types/: contribution_activity.rs  error.rs  mod.rs
src/: lib.rs  source.rs
src/provider/: github.rs  gitlab.rs  mod.rs
web/: Cargo.toml
web/src/: main.rs  query.rs
web/static/gitlab-calendar/: calendar.html  calendar.js  form.js  index.html  main.css
