[package]
name = "commitoria-core"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
reqwest = "0.12.9"
scraper = "0.22.0"
serde_json = "1.0.133"
time = { version = "0.3.37", features = ["macros", "parsing"] }
tokio = { version = "1.42.0", features = ["macros"] }
serde = { version = "1.0.217", optional = true, features = ["serde_derive"] }

[features]
serde = ["dep:serde"]
