[package]
name = "commitoria-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
reqwest = "0.12.9"
scraper = "0.22.0"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros"] }
serde = { version = "1.0.217", optional = true, features = ["serde_derive"] }
chrono = { version = "0.4.39", optional = true }

[features]
serde = ["dep:serde"]
svg = ["dep:chrono"]
