[package]
name = "commitoria-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
reqwest = "0.12.9"
scraper = "0.22.0"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
chrono = { version = "0.4.39" }
git2 = { version = "0.20.1", optional = true }
uuid = { version = "1.16.0", optional = true, features = ["v4"] }
url = { version = "2.5.4", features = ["serde"] }

[features]
svg = []
git = ["dep:git2", "dep:uuid"]
