[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
commitoria-lib = { path = "../lib", features = ["git", "svg"] }
serde = "1.0.217"
axum-extra = { version = "0.10.1", features = ["query"] }
serde_json = "1.0.140"
const_format = "0.2.34"
tower_governor = "0.7.0"
